add: HF and RWI temperature

--- a/JUICE-CDF-HF-SID5_sample.ipynb
+++ b/JUICE-CDF-HF-SID5_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/1/16"
+    "# JUICE RPWI HF SID5 (PSSR1 surv): L1a QL -- 2024/2/2"
    ]
   },
   {
@@ -219,10 +219,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 8))\n",
-    "ax1 = fig.add_subplot(3, 1, 1)\n",
-    "ax2 = fig.add_subplot(3, 1, 2)\n",
-    "ax3 = fig.add_subplot(3, 1, 3)\n",
+    "fig = plt.figure(figsize=(12, 10))\n",
+    "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 4);  ax4 = fig.add_subplot(4, 1, 3)\n",
     "\n",
     "ax1.plot(np.ravel(data.EE), '-r', linewidth=.5, label='EE')\n",
     "ax1.set_yscale('log')\n",
@@ -231,15 +229,16 @@
     "ax2.plot(np.ravel(data.freq_step*100),  '-g', linewidth=0.8, label='step*100')\n",
     "ax2.plot(np.ravel(data.freq_width*100), ':b', linewidth=1.0, label='width*100')\n",
     "ax3.plot(np.ravel(data.epoch[:]), '.')\n",
+    "ax4.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
+    "ax4.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
+    "ax4.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
     "\n",
-    "ax1.set_ylabel(power_str)\n",
-    "ax2.set_ylabel('frequency [kHz]')\n",
-    "ax3.set_ylabel('Date-Time')\n",
+    "ax1.set_ylabel(power_str);  ax2.set_ylabel('frequency [kHz]');  ax3.set_ylabel('Date-Time');  ax4.set_ylabel('T [degC]')\n",
     "ax3.set_xlabel(str_date)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF PSSR1-Surv (SID-5)]  ' + data_name\n",
     "ax1.set_title(title_label);  \n",
-    "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8);\n",
+    "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8);  ax4.legend(loc='upper right', fontsize=8); \n",
     "\n",
     "\"\"\"\n",
     "# range: X-axis\n",
