--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/1/30"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/2/2"
    ]
   },
   {
@@ -120,8 +120,7 @@
     "# *** Flight data: Ver.2 ***\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
-    "data_name = 'JUICE_L1a_RPWI-HF-SID6_20240126T091728-V01.cdf'\n",
-    "# data_name = 'JUICE_L1a_RPWI-HF-SID6_20240126T091728_V01.cdf'\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID6_20240126T091728_V01.cdf'\n",
     "\"\"\"\n",
     "\"\"\""
    ]
@@ -187,19 +186,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 7))\n",
-    "ax1 = fig.add_subplot(2, 1, 1);  ax2 = fig.add_subplot(2, 1, 2)\n",
+    "fig = plt.figure(figsize=(12, 9))\n",
+    "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 3);  ax3 = fig.add_subplot(3, 1, 2)\n",
     "\n",
     "ax1.plot(np.ravel(data.auto_corr[:][:]), linewidth=.5, label='auto_corr')\n",
     "ax2.plot(np.ravel(data.epoch[:]), '.')\n",
+    "ax3.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
+    "ax3.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
+    "ax3.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
     "#\n",
-    "ax1.set_ylabel('AutoCorr')\n",
+    "ax1.set_ylabel('AutoCorr');  ax3.set_ylabel('T [degC]')\n",
     "ax2.set_ylabel('Date-Time')\n",
     "ax2.set_xlabel(str_date)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF PSSR2-Surv (SID-6)]  ' + data_name\n",
     "ax1.set_title(title_label)\n",
-    "ax1.legend(loc='upper right', fontsize=8)\n",
+    "ax1.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "\n",
     "\"\"\"\n",
     "# range: X-axis\n",
