--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/1/30"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/2/2"
    ]
   },
   {
@@ -181,17 +181,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=(12, 7))\n",
-    "ax1 = fig.add_subplot(2, 1, 1);  ax2 = fig.add_subplot(2, 1, 2)\n",
+    "fig = plt.figure(figsize=(12, 9))\n",
+    "ax1 = fig.add_subplot(3, 1, 1);  ax2 = fig.add_subplot(3, 1, 3);  ax3 = fig.add_subplot(3, 1, 2)\n",
     "\n",
     "ax1.plot(np.ravel(data.auto_corr[:][:]), linewidth=.5, label='auto_corr')\n",
     "ax2.plot(np.ravel(data.epoch[:]), '.')\n",
-    "ax1.set_ylabel('AutoCorr')\n",
+    "ax3.plot(np.ravel(data.T_HF_FPGA),  ':r', label='T (HK-FPGA)')\n",
+    "ax3.plot(np.ravel(data.T_RWI_CH1),  ':b', label='T (RWI1)')\n",
+    "ax3.plot(np.ravel(data.T_RWI_CH2),  ':g', label='T (RWI2)')\n",
+    "ax1.set_ylabel('AutoCorr');  ax3.set_ylabel('T [degC]')\n",
     "ax2.set_xlabel(str_date)\n",
     "#\n",
     "title_label = '[JUICE/RPWI HF PSSR3-Surv (SID-7)]  ' + data_name;  ax1.set_title(title_label)\n",
-    "ax1.legend(loc='upper right', fontsize=8)\n",
-    "\n",
+    "ax1.legend(loc='upper right', fontsize=8); ax3.legend(loc='upper right', fontsize=8); \n",
     "\"\"\"\n",
     "# range: X-axis\n",
     "xlim=[n_length0 * 0, n_length0 * 3 - 1]\n",
