--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/1/27"
+    "# JUICE RPWI HF HK: QL -- 2024/2/2"
    ]
   },
   {
@@ -61,7 +61,7 @@
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'                      # Plot dump folder\n",
     "base_dir = '/Users/user/OneDrive-Univ/data/data-JUICE/datasets/'\n",
     "\n",
-    "date='20240125'"
+    "date='20240126'"
    ]
   },
   {
@@ -78,19 +78,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_hf, err_hf = juice_hk.juice_readhk(\n",
-    "    date, 'LWYHK00032', base_dir=base_dir)\n",
-    "data_dpu, err_dpu = juice_hk.juice_readhk(\n",
-    "    date, 'LWYHK00064', base_dir=base_dir)\n",
-    "data_lvps, err_lvps = juice_hk.juice_readhk(\n",
-    "    date, 'LWYHK00080', base_dir=base_dir)\n",
-    "\n",
+    "data_hf, err_hf = juice_hk.juice_readhk(date, 'LWYHK00032', base_dir=base_dir)\n",
     "if err_hf == 0: \n",
     "    hk_hf = juice_hk.juice_gethk_hf(data_hf)\n",
+    "    print(\"read HF HK\")\n",
+    "    err_hf2 = 1\n",
+    "else:\n",
+    "    data_hf, err_hf2 = juice_hk.juice_readhk(date, 'LWYHK10033', base_dir=base_dir)\n",
+    "    if err_hf2 == 0: \n",
+    "        hk_hf = juice_hk.juice_gethk_hf2(data_hf)\n",
+    "        print(\"read HF HK2\")\n",
+    "        err_hf = 0\n",
+    "\n",
+    "data_dpu, err_dpu = juice_hk.juice_readhk(date, 'LWYHK00064', base_dir=base_dir)\n",
     "if err_dpu == 0:\n",
     "    hk_dpu = juice_hk.juice_gethk_dpu(data_dpu)\n",
+    "    print(\"read DPU HK\")\n",
+    "\n",
+    "data_lvps, err_lvps = juice_hk.juice_readhk(date, 'LWYHK00080', base_dir=base_dir)\n",
     "if err_lvps == 0:\n",
-    "    hk_lvps = juice_hk.juice_gethk_lvps(data_lvps)\n"
+    "    hk_lvps = juice_hk.juice_gethk_lvps(data_lvps)\n",
+    "    print(\"read LVPS HK\")"
    ]
   },
   {
@@ -137,7 +145,7 @@
     "if err_hf == 0:\n",
     "    ax2.plot(hk_hf.epoch, temp_rwi_ch1, '.g', label='RWI CH1')\n",
     "    ax2.plot(hk_hf.epoch, temp_rwi_ch2, '.b', label='RWI CH2')\n",
-    "\n",
+    "    # print(temp_rwi_ch1)\n",
     "ax2.set_ylabel('RWI Temperature [degC]')\n",
     "ax2.legend()\n",
     "\n",
@@ -160,7 +168,8 @@
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
     "    ax5.plot(hk_hf.epoch, hk_hf.heater_ena, '.r', label='Heater ENA')\n",
-    "    ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
+    "    if err_hf2 != 0:\n",
+    "        ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
     "\n",
     "ax5.set_ylabel('HF status')\n",
     "ax5.legend()\n",
