--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -105,7 +105,6 @@
     "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/sample/cdf/'        # CDF data folder\n",
     "data_name = 'SID20_20231024-0042.cdf'\n",
     "\n",
-    "\"\"\"\n",
     "# 202310 -- FS\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202311_FS/cdf/'        # CDF data folder\n",
     "data_name = 'SID20_Seq01.cdf'\n",
@@ -118,6 +117,12 @@
     "# 202312 -- Checkout\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202312_C/cdf/'    # 202312_FS test folder\n",
     "data_name = 'SID20_RPWI_NEWv2_SCI.cdf'\n",
+    "\n",
+    "# *** Ver.3 ***\n",
+    "# 202402 -- ASW3\n",
+    "data_dir = '/Users/user/0-python/JUICE_data/test-CCSDS/IRFU/cdf/'    # 202312_FS test folder\n",
+    "data_name = 'JUICE_L1a_RPWI-HF-SID20_20240201.cdf'\n",
+    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -129,11 +134,11 @@
    "outputs": [],
    "source": [
     "# *** Flight data: Ver.2 ***\n",
+    "\"\"\"\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/26/'        # CDF data folder\n",
     "data_name = 'JUICE_L1a_RPWI-HF-SID20_20240126T113714_V01.cdf'\n",
     "data_name = 'JUICE_L1a_RPWI-HF-SID20_20240126T114800_V01.cdf'\n",
-    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -194,7 +199,19 @@
     "N_frequency = data.B0_step[0] * data.B0_subdiv[0]\n",
     "print(\"==> Component\", N_component, \"   Num-frequency\", N_frequency, \"  Num-sweep:\", n_time)\n",
     "\n",
-    "# print(data.epoch[-40:-1])"
+    "\"\"\"\n",
+    "# Check of Time increment:  in Issue #958\n",
+    "time_old = 0\n",
+    "for i in range(len(data.epoch)):\n",
+    "    if (i>260 and i<265):\n",
+    "        print(i, data.epoch[i])\n",
+    "    # print(i, data.epoch[i].strftime('%Y/%m/%d %R:%S'))\n",
+    "    time_new = data.epoch[i].strftime('%Y/%m/%d %R:%S')\n",
+    "    time_new = np.int16(data.epoch[i].strftime('%S'))\n",
+    "    if (time_new != time_old + 1):\n",
+    "        print (i-1, time_old, i, time_new)\n",
+    "    time_old = time_new\n",
+    "\"\"\""
    ]
   },
   {
