group read (SID-4,20) + minor updates

--- a/JUICE-CDF-HF-SID22_sample.ipynb
+++ b/JUICE-CDF-HF-SID22_sample.ipynb
@@ -156,7 +156,8 @@
     "\n",
     "n_time = data.auto_corr.shape[0]\n",
     "n_time0 = n_time-1\n",
-    "print(\"data size:\", data.auto_corr.shape)  # n_time, 16, data.N_samp_AUX[0]"
+    "print(\"data size:\", data.auto_corr.shape)  # n_time, 16, data.N_samp_AUX[0]\n",
+    "# print(data.epoch)"
    ]
   },
   {
