--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/1/30"
+    "# JUICE RPWI HF SID23 (PSSR3 rich): L1a QL -- 2024/2/7"
    ]
   },
   {
@@ -161,7 +161,8 @@
     "n_time0 = data.n_time\n",
     "n_block0 = data.time.shape[1]\n",
     "n_length0 = data.time.shape[2]\n",
-    "n_num0 = n_block0 * n_length0 "
+    "n_num0 = n_block0 * n_length0 \n",
+    "# print(data.epoch)"
    ]
   },
   {
