--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/1/30"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/2/4"
    ]
   },
   {
@@ -165,8 +165,8 @@
     "# *** Flight data: Ver.2 ***\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'        # CDF data folder\n",
-    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',\n",
-    "                  #'JUICE_L1a_RPWI-HF-SID2_20240125T152238_V01.cdf',\n",
+    "data_name_list = [# 'JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',\n",
+    "                  'JUICE_L1a_RPWI-HF-SID2_20240125T152238_V01.cdf',\n",
     "                 ]\n",
     "\"\"\"\n",
     "\"\"\""
@@ -218,7 +218,10 @@
     "                  '07/13/SID2_20230713T001856-20230713T004644.cdf',\n",
     "                 ]\n",
     "#      battery\n",
-    "data_name_list = ['07/13/SID2_20230713T004648-20230713T011342.cdf',\n",
+    "data_name_list = ['07/12/SID2_20230712T232408-20230712T235156.cdf',\n",
+    "                  '07/12/SID2_20230712T235158-20230713T001854.cdf',\n",
+    "                  '07/13/SID2_20230713T001856-20230713T004644.cdf',\n",
+    "                  '07/13/SID2_20230713T004648-20230713T011342.cdf',\n",
     "                  '07/13/SID2_20230713T011436-20230713T014134.cdf',\n",
     "                  '07/13/SID2_20230713T014136-20230713T020924.cdf',\n",
     "                  '07/13/SID2_20230713T020928-20230713T023718.cdf',\n",
@@ -473,7 +476,8 @@
     "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
     "print(\"Num-samples:\", n_time0, \"   Num-Frequency:\", n_freq0, \"   Length:\", n_samp0)\n",
     "print(\"Frequency, width, step (kHz):\", f_min0,  \"-\", f_max0, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
-    "print(\"Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")"
+    "print(\"Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")\n",
+    "# print(data.epoch)"
    ]
   },
   {
@@ -554,7 +558,9 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)\n"
    ]
   },
   {
@@ -722,11 +728,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "# cal_unit = juice_cdf.cal_unit(unit_mode, freq_1d)\n",
     "num_freq = freq_1d.shape[0]\n",
     "for i in range(freq_1d.shape[0]):\n",
     "    print(freq_1d[i])\n",
-    "    "
+    "\"\"\"    "
    ]
   },
   {
@@ -839,11 +846,13 @@
    "source": [
     "# Sweep_num\n",
     "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
-    "n_sweep1 = n_time0//4;  n_sweep2 = 3*n_time0//4;  n_sweep3 = n_time0-1\n",
+    "n_sweep1 = n_time0//4;  n_sweep2 = n_time0//2;  n_sweep3 = 3*n_time0//4\n",
+    "# n_sweep1 = n_time0//4;  n_sweep2 = 3*n_time0//4;  n_sweep3 = n_time0-1\n",
     "# Y-range\n",
-    "p_min = p_min0-1;   p_max = p_max0-3\n",
+    "p_min = p_min0;   p_max = p_max0-2\n",
     "# X-range\n",
     "f_min = 0;  f_max = 5000\n",
+    "# f_min = 190;  f_max = 210\n",
     "\n",
     "fig = plt.figure(figsize=(12, 20))\n",
     "ax1 = fig.add_subplot(9, 1, 1);  ax2 = fig.add_subplot(9, 1, 2);  ax3 = fig.add_subplot(9, 1, 3);  ax4 = fig.add_subplot(9, 1, 4)\n",
@@ -903,11 +912,9 @@
     "xlim=[f_min+40000, f_max+40000];  ax9.set_xlim(xlim)\n",
     "\n",
     "# range\n",
-    "\"\"\"\n",
     "ylim=[10**p_min, 10**p_max]\n",
     "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim); ax5.set_ylim(ylim); ax6.set_ylim(ylim);  \n",
     "ax7.set_ylim(ylim); ax8.set_ylim(ylim);  ax9.set_ylim(ylim)\n",
-    "\"\"\"\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
