--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -6,7 +6,7 @@
    "id": "a116756d",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/1/30"
+    "# JUICE RPWI HF SID3 (Full): L1a QL -- 2024/2/7"
    ]
   },
   {
@@ -27,6 +27,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
+    "import datetime\n",
     "import glob"
    ]
   },
@@ -84,8 +85,8 @@
     "p_raw_min = 3.5                         # background: 2.5   CAL: 5\n",
     "\n",
     "# *** Conversion factor: cal_mode ***\n",
-    "cf, p_max, p_min = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
-    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max, p_min)\n",
+    "cf, p_max0, p_min0 = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
+    "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0)\n",
     "\n",
     "# *** Directory set: set by User ***\n",
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'   # Plot dump folder"
@@ -105,7 +106,6 @@
     "data_name_list = ['SID03-2ch-comp0-20231117-1438.cdf']\n",
     "data_name_list = ['SID03-2ch-comp1-20231117-1448.cdf']\n",
     "data_name_list = ['SID03-2ch-comp2-20231117-1500.cdf']\n",
-    "\"\"\"\n",
     "data_name_list = ['SID03-3ch-comp0-20231117-1424.cdf']\n",
     "data_name_list = ['SID03-3ch-comp1-20231117-1418.cdf']\n",
     "data_name_list = ['SID03-3ch-comp2-20231117-1429.cdf']\n",
@@ -122,22 +122,22 @@
     "data_name_list = ['SID03_Seq14.cdf']\n",
     "data_name_list = ['SID03_Seq15.cdf']\n",
     "data_name_list = ['SID03_Seq17.cdf']\n",
-    "\n",
     "data_name_list = ['SID03_Seq03.cdf',\n",
     "                  'SID03_Seq04.cdf',\n",
     "                  'SID03_Seq10.cdf',\n",
     "                  'SID03_Seq11.cdf',\n",
     "                  'SID03_Seq12.cdf',\n",
     "                  'SID03_Seq13.cdf',\n",
-    "                  'SID03_Seq14.cdf',\n",
     "                  'SID03_Seq15.cdf',\n",
     "                  'SID03_Seq17.cdf',\n",
+    "                  'SID03_Seq14.cdf',\n",
     "                 ]\n",
     "\n",
     "# 202401 -- ErrorCheck\n",
     "data_dir = '/Users/user/0-python/JUICE_data/test-TMIDX/202401_FS/cdf/'    # 202312_FS test folder\n",
     "data_name_list = ['JUICE_L1a_RPWI-HF-SID3_comp2.cdf',\n",
     "                 ]\n",
+    "\"\"\"\n",
     "\"\"\""
    ]
   },
@@ -361,7 +361,8 @@
     "\n",
     "n_time0 = data.EuEu.shape[0]\n",
     "n_freq0 = data.EuEu.shape[1]\n",
-    "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)"
+    "print(\"data size:\", data.EuEu.shape, n_time0, n_freq0)\n",
+    "# print(data.epoch)"
    ]
   },
   {
@@ -443,10 +444,10 @@
     "    print(\"frequency width:\", freq_width1)\n",
     "    \"\"\"\n",
     "#\n",
-    "f_min = freq_1d[0]\n",
-    "f_max = freq_1d[N_frequency-1]\n",
+    "f_min0 = freq_1d[0]\n",
+    "f_max0 = freq_1d[N_frequency-1]\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "print(power_str, \"   f_MAX/min:\", f_max, f_min)"
+    "print(power_str, \"   f_MAX/min:\", f_max0, f_min0)"
    ]
   },
   {
@@ -575,14 +576,16 @@
     "    ylim=[-0.05, 1.05]; ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
     "    ylim=[-1.05, 1.05]; ax5.set_ylim(ylim)\n",
     "    ylim=[-0.05, 185.]; ax6.set_ylim(ylim)\n",
-    "ylim=[f_min, f_max]\n",
+    "ylim=[f_min0, f_max0]\n",
     "ax7.set_ylim(ylim)\n",
     "\n",
     "# Plot\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)"
    ]
   },
   {
@@ -603,11 +606,11 @@
     "# Sweep_num\n",
     "n0 = 0;   n1 = n_time0//2;  n2 = n_time0-1  # 11\n",
     "# Y-range\n",
-    "p_min0 = p_min;  p_max0 = p_max\n",
+    "p_min = p_min0;  p_max = p_max0\n",
     "# X-range\n",
-    "f_min0 = f_min;  f_max0 = f_max\n",
+    "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
-    "    f_min0 = f_min;  f_max0 = 5000\n",
+    "    f_min = f_min0;  f_max = 5000\n",
     "\n",
     "if data.complex[0] == 0:    # power\n",
     "    fig = plt.figure(figsize=(12, 4))\n",
@@ -701,7 +704,7 @@
     "    ax5.legend(loc='upper right', fontsize=8); ax6.legend(loc='upper right', fontsize=8);  ax7.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: X-axis\n",
-    "xlim=[f_min0, f_max0]\n",
+    "xlim=[f_min, f_max]\n",
     "ax1.set_xlim(xlim); \n",
     "if data.complex[0] > 0:    # Matrix\n",
     "    ax5.set_xlim(xlim); ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); \n",
@@ -752,11 +755,11 @@
    "outputs": [],
    "source": [
     "# Y-range\n",
-    "f_min0 = f_min;      f_max0 = f_max\n",
+    "f_min = f_min0;      f_max = f_max0\n",
     "if f_mode == 0:\n",
-    "    f_min0 = f_min;  f_max0 = 5000\n",
+    "    f_min = f_min0;  f_max = 5000\n",
     "# Z-range\n",
-    "p_min0 = p_min;      p_max0 = p_max\n",
+    "p_min = p_min0;      p_max = p_max0-2\n",
     "\n",
     "# Epoch_1d\n",
     "num_1d = np.arange(n_time0)\n",
@@ -767,7 +770,7 @@
     "    ax4 = fig2d.add_subplot(4, 1, 4)\n",
     "\n",
     "# Y-axis\n",
-    "ax1.set_ylim(f_min0, f_max0);      ax2.set_ylim(f_min0, f_max0);      ax3.set_ylim(f_min0, f_max0)\n",
+    "ax1.set_ylim(f_min, f_max);        ax2.set_ylim(f_min, f_max);        ax3.set_ylim(f_min, f_max)\n",
     "if f_mode == 1:\n",
     "    ax1.set_yscale('log');         ax2.set_yscale('log');             ax3.set_yscale('log')\n",
     "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
@@ -787,16 +790,23 @@
     "    p4 = ax4.plot(np.ravel(data.epoch[:]), '.')\n",
     "    pp3 = fig2d.colorbar(p3, ax=ax4, orientation=\"vertical\"); pp3.set_label(power_str)\n",
     "else:\n",
-    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
-    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
-    "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min0, vmax=10**p_max0), cmap='jet')\n",
+    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EuEu_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p2 = ax2.pcolormesh(Epoch_1d, freq_1d, EvEv_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p3 = ax3.pcolormesh(Epoch_1d, freq_1d, EwEw_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
     "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
     "\n",
+    "# X-axis: Time\n",
     "if time_mode == 1:\n",
     "    xlim=[num_1d[0], num_1d[-1]]\n",
-    "    ax1.set_xlim(xlim); ax2.set_xlim(xlim);  ax3.set_xlim(xlim); ax4.set_xlim(xlim)\n",
+    "    ax4.set_xlim(xlim)\n",
+    "else:\n",
+    "    E_min = '2024-01-26 08:40:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    E_max = '2024-01-26 09:40:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    xlim=[t_min, t_max]\n",
+    "    xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
+    "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
     "plt.show()\n",
     "if dump_mode == 1:\n",
@@ -827,7 +837,7 @@
     "    if f_mode == 0:\n",
     "        f_min0 = f_min;  f_max0 = 5000\n",
     "    # Z-range\n",
-    "    p_min0 = p_min;      p_max0 = p_max\n",
+    "    p_min = p_min0;      p_max = p_max0\n",
     "\n",
     "    fig2d = plt.figure(figsize=[12,33])\n",
     "    ax1 = fig2d.add_subplot(10, 1, 1);  ax2 = fig2d.add_subplot(10, 1, 2);  ax3 = fig2d.add_subplot(10, 1, 3)\n",
@@ -890,10 +900,17 @@
     "    pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\");  pp2.set_label(power_str)\n",
     "    pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\");  pp3.set_label(power_str)\n",
     "\n",
+    "    # X-axis\n",
     "    if time_mode == 1:\n",
     "        xlim=[num_1d[0], num_1d[-1]]\n",
-    "        ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
-    "        ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim); ax10.set_xlim(xlim)\n",
+    "        ax10.set_xlim(xlim)\n",
+    "    else:\n",
+    "        E_min = '2024-01-26 08:40:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "        E_max = '2024-01-26 09:40:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "        xlim=[t_min, t_max]\n",
+    "        xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
+    "    ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
+    "    ax6.set_xlim(xlim); ax7.set_xlim(xlim); ax8.set_xlim(xlim); ax9.set_xlim(xlim)\n",
     "\n",
     "    plt.show()\n",
     "    if dump_mode == 1:\n",
@@ -1060,6 +1077,17 @@
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
     "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "\n",
+    "# X-axis\n",
+    "if time_mode == 1:\n",
+    "    xlim=[num_1d[0], num_1d[-1]]\n",
+    "    ax4.set_xlim(xlim)\n",
+    "else:\n",
+    "    E_min = '2024-01-26 08:40:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    E_max = '2024-01-26 09:40:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    xlim=[t_min, t_max]\n",
+    "    xlim=[Epoch_1d[0], Epoch_1d[-1]]\n",
+    "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
     "plt.show()\n",
     "png_fname = work_dir+data_name+'_FT-c.png'\n",
