--- a/JUICE-CDF-HF-SID6_sample.ipynb
+++ b/JUICE-CDF-HF-SID6_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/2/2"
+    "# JUICE RPWI HF SID6 (PSSR2 surv): L1a QL -- 2024/2/7"
    ]
   },
   {
@@ -156,7 +156,8 @@
     "\n",
     "n_time = data.auto_corr.shape[0]\n",
     "n_time0 = n_time-1\n",
-    "print(\"data size:\", data.auto_corr.shape)  # n_time, 16, data.N_samp_AUX[0]"
+    "print(\"data size:\", data.auto_corr.shape)  # n_time, 16, data.N_samp_AUX[0]\n",
+    "# print(data.epoch)"
    ]
   },
   {
@@ -216,7 +217,9 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)"
    ]
   },
   {
