--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/2/2"
+    "# JUICE RPWI HF SID7 (PSSR3 surv): L1a QL -- 2024/2/7"
    ]
   },
   {
@@ -162,7 +162,8 @@
     "n_block0 = data.N_block[0]\n",
     "n_length0 = data.N_samp_AUX[0]\n",
     "freq_center = data.freq_center[0]\n",
-    "print(\"data size:\", data.auto_corr.shape, \" frequency_center:\", freq_center, \"[kHz]\")"
+    "print(\"data size:\", data.auto_corr.shape, \" frequency_center:\", freq_center, \"[kHz]\")\n",
+    "# print(data.epoch)"
    ]
   },
   {
@@ -207,7 +208,9 @@
     "fig.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_raw.png'\n",
-    "    fig.savefig(png_fname)"
+    "    fig.savefig(png_fname)\n",
+    "\n",
+    "print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)"
    ]
   },
   {
