ORBIT upload  +  minor update

--- a/JUICE-CDF-HF-HK-sample.ipynb
+++ b/JUICE-CDF-HF-HK-sample.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF HK: QL -- 2024/2/2"
+    "# JUICE RPWI HF HK: QL -- 2024/2/７"
    ]
   },
   {
@@ -61,7 +61,8 @@
     "work_dir = '/Users/user/0-python/JUICE_python/ql/'                      # Plot dump folder\n",
     "base_dir = '/Users/user/OneDrive-Univ/data/data-JUICE/datasets/'\n",
     "\n",
-    "date='20240126'"
+    "date='20230712'\n",
+    "date='20240125'"
    ]
   },
   {
@@ -168,6 +169,8 @@
     "#-----------------------------------------------------------------\n",
     "if err_hf == 0:\n",
     "    ax5.plot(hk_hf.epoch, hk_hf.heater_ena, '.r', label='Heater ENA')\n",
+    "    ax5.plot(hk_hf.epoch, hk_hf.pol + 0.2, '.g', label='Pol Master/Slave')\n",
+    "\n",
     "    if err_hf2 != 0:\n",
     "        ax5.plot(hk_hf.epoch, hk_hf.calsig_ena+0.1, '.b', label='Cal signal ENA')\n",
     "\n",
