--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -77,7 +77,7 @@
     "f_mode = 1                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "#\n",
-    "time_mode = 0                           # 0: Epoch    1: data number\n",
+    "time_mode = 1                           # 0: Epoch    1: data number\n",
     "\n",
     "# *** Parameter set ***\n",
     "cal = 0                                 # 0: background     1: CAL\n",
@@ -228,7 +228,6 @@
    "outputs": [],
    "source": [
     "# *** Prelaunch - Ver.1 ***\n",
-    "\"\"\"\n",
     "# *** 202105\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202105/'        # CDF data folder\n",
     "data_name_list = ['SID3_20210531_SCPFM_PTR_RPWI_2_day4_xid32813.cdf']\n",
@@ -255,14 +254,12 @@
     "                  'SID3_20220400_SCPFM_EMCR.Phase4_xid32996.cdf',\n",
     "                  'SID3_20220400_SCPFM_EMCR.Phase4_xid32997.cdf',\n",
     "                  'SID3_20220400_SCPFM_EMCR.Phase4_xid32998.cdf',\n",
-    "                 ]\n",
-    "data_name_list = ['SID3_20220400_SCPFM_EMCR.Phase4_xid32999.cdf',\n",
+    "                  'SID3_20220400_SCPFM_EMCR.Phase4_xid32999.cdf',\n",
     "                  'SID3_20220400_SCPFM_EMCR.Phase4_xid33000.cdf',\n",
     "                  'SID3_20220400_SCPFM_EMCR.Phase4_xid33001.cdf',\n",
     "                  'SID3_20220400_SCPFM_EMCR.Phase4_xid33002.cdf',\n",
     "                  'SID3_20220400_SCPFM_EMCR.Phase4_xid33003.cdf',\n",
-    "                 ]\n",
-    "data_name_list = ['SID3_20220400_SCPFM_EMCR.RPWI_NCR_xid32798.cdf',\n",
+    "                  'SID3_20220400_SCPFM_EMCR.RPWI_NCR_xid32798.cdf',\n",
     "                  'SID3_20220400_SCPFM_EMCR.RPWI_NCR_xid32799.cdf',\n",
     "                  'SID3_20220400_SCPFM_EMCR.RPWI_NCR_xid32800.cdf',\n",
     "                  'SID3_20220400_SCPFM_EMCR.RPWI_NCR_xid32801.cdf',\n",
@@ -271,6 +268,7 @@
     "                  'SID3_20220400_SCPFM_EMCR.RPWI_NCR_xid32804.cdf',\n",
     "                 ] \n",
     "                \n",
+    "\"\"\"\n",
     "# *** 202211 ***\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/prelaunch/202211/'        # CDF data folder\n",
     "data_name_list = ['SID3_20221115_Mission_Test_GCO500_1RPR_4.cdf',\n",
@@ -759,7 +757,7 @@
     "if f_mode == 0:\n",
     "    f_min = f_min0;  f_max = 5000\n",
     "# Z-range\n",
-    "p_min = p_min0;      p_max = p_max0-2\n",
+    "p_min = p_min0-1;      p_max = p_max0\n",
     "\n",
     "# Epoch_1d\n",
     "num_1d = np.arange(n_time0)\n",
