--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -210,7 +210,7 @@
     "    png_fname = work_dir+data_name+'_raw.png'\n",
     "    fig.savefig(png_fname)\n",
     "\n",
-    "print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)"
+    "# print(data.T_HF_FPGA, data.T_RWI_CH1, data.T_RWI_CH2)"
    ]
   },
   {
