--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/2/7"
+    "# JUICE RPWI HF SID20 (Burst rich): L1a QL -- 2024/2/17"
    ]
   },
   {
@@ -79,10 +79,10 @@
     "# *** Mode set ***\n",
     "band_mode = 0                           # 0: sum    1: /Hz\n",
     "unit_mode = 0                           # 0: raw    1: dBm＠ADC  2: V@HF   3:V2@HF   4:V2@RWI\n",
-    "f_mode = 0                              # 0: linear   1:log  in frequency\n",
+    "f_mode = 1                              # 0: linear   1:log  in frequency\n",
     "dump_mode = 1                           # 0: no-dump  1:plot dump\n",
     "#\n",
-    "time_mode = 1                           # 0: Epoch    1: data number\n",
+    "time_mode = 0                           # 0: Epoch    1: data number\n",
     "\n",
     "# *** Parameter set ***\n",
     "cal = 0                                 # 0: background     1: CAL\n",
@@ -620,8 +620,9 @@
    "source": [
     "# Y-range\n",
     "f_min = f_min0;      f_max = f_max0\n",
+    "# f_min = 100;         f_max = 1000\n",
     "# Z-range\n",
-    "p_min = p_min0+.5;   p_max = p_max0-5\n",
+    "p_min = p_min0+1;   p_max = p_max0-2\n",
     "# Epoch_1d\n",
     "num_1d = np.arange(EuEu_2d.shape[1])\n",
     "\n",
@@ -631,7 +632,7 @@
     "    ax4 = fig2d.add_subplot(4, 1, 4)\n",
     "\n",
     "# Y-axis\n",
-    "ax1.set_ylim(f_min0, f_max0);      ax2.set_ylim(f_min0, f_max0);      ax3.set_ylim(f_min0, f_max0)\n",
+    "ax1.set_ylim(f_min, f_max);        ax2.set_ylim(f_min, f_max);        ax3.set_ylim(f_min, f_max)\n",
     "if f_mode == 1:\n",
     "    ax1.set_yscale('log');         ax2.set_yscale('log');             ax3.set_yscale('log')\n",
     "ax1.set_ylabel('Frequency [kHz]'); ax2.set_ylabel('Frequency [kHz]'); ax3.set_ylabel('Frequency [kHz]')\n",
@@ -664,10 +665,11 @@
     "    # xlim=[num_1d[0], 100]\n",
     "    ax4.set_xlim(xlim)\n",
     "else:\n",
-    "    E_min = '2024-01-26 12:16:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    E_max = '2024-01-26 12:20:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    E_min = '2024-01-26 11:56:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    E_max = '2024-01-26 11:57:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
     "    xlim=[t_min, t_max]\n",
     "    xlim=[Epoch_2d[0], Epoch_2d[-1]]\n",
+    "    print(xlim)\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim)\n",
     "\n",
     "plt.show()\n",
@@ -693,8 +695,10 @@
    "source": [
     "# Y-range\n",
     "f_min = f_min0;      f_max = f_max0\n",
+    "# f_min = 100;         f_max = 1000\n",
     "# Z-range\n",
     "p_min = p_min0;      p_max = p_max0\n",
+    "p_min = p_min0+1;    p_max = p_max0-2\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,30])\n",
     "ax1 = fig2d.add_subplot(10, 1, 1);  ax2 = fig2d.add_subplot(10, 1, 2);  ax3 = fig2d.add_subplot(10, 1, 3)\n",
@@ -704,9 +708,9 @@
     "    ax10 = fig2d.add_subplot(10, 1, 10)\n",
     "\n",
     "# Y-axis\n",
-    "ax1.set_ylim(f_min0, f_max0);      ax2.set_ylim(f_min0, f_max0);      ax3.set_ylim(f_min0, f_max0)\n",
-    "ax4.set_ylim(f_min0, f_max0);      ax5.set_ylim(f_min0, f_max0);      ax6.set_ylim(f_min0, f_max0)\n",
-    "ax7.set_ylim(f_min0, f_max0);      ax8.set_ylim(f_min0, f_max0);      ax9.set_ylim(f_min0, f_max0)\n",
+    "ax1.set_ylim(f_min, f_max);      ax2.set_ylim(f_min, f_max);      ax3.set_ylim(f_min, f_max)\n",
+    "ax4.set_ylim(f_min, f_max);      ax5.set_ylim(f_min, f_max);      ax6.set_ylim(f_min, f_max)\n",
+    "ax7.set_ylim(f_min, f_max);      ax8.set_ylim(f_min, f_max);      ax9.set_ylim(f_min, f_max)\n",
     "if f_mode == 1:\n",
     "    ax1.set_yscale('log');         ax2.set_yscale('log');             ax3.set_yscale('log')\n",
     "    ax4.set_yscale('log');         ax5.set_yscale('log');             ax6.set_yscale('log')\n",
@@ -756,8 +760,8 @@
     "    # xlim=[num_1d[0], 100]\n",
     "    ax10.set_xlim(xlim)\n",
     "else:\n",
-    "    E_min = '2024-01-26 08:40:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
-    "    E_max = '2024-01-26 09:40:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    E_min = '2024-01-26 11:56:00';  t_min = datetime.datetime.strptime(E_min, \"%Y-%m-%d %H:%M:%S\");  \n",
+    "    E_max = '2024-01-26 11:57:00';  t_max = datetime.datetime.strptime(E_max, \"%Y-%m-%d %H:%M:%S\");  \n",
     "    xlim=[t_min, t_max]\n",
     "    xlim=[Epoch_2d[0], Epoch_2d[-1]]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim); ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim); ax6.set_xlim(xlim)\n",
@@ -863,7 +867,7 @@
     "ax1.legend(loc='upper right', fontsize=8); ax2.legend(loc='upper right', fontsize=8)\n",
     "\n",
     "# range: X-axis\n",
-    "xlim=[f_min0, f_max0]\n",
+    "xlim=[f_min, f_max]\n",
     "ax1.set_xlim(xlim); ax2.set_xlim(xlim);\n",
     "\n",
     "# Plot\n",
