--- a/JUICE-CDF-HF-SID2_sample.ipynb
+++ b/JUICE-CDF-HF-SID2_sample.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/2/4"
+    "# JUICE RPWI HF SID2 (RAW): L1a QL -- 2024/2/17"
    ]
   },
   {
@@ -165,8 +165,8 @@
     "# *** Flight data: Ver.2 ***\n",
     "# 20240126\n",
     "data_dir = '/Users/user/0-python/JUICE_data/Data-CDF/2024/01/25/'        # CDF data folder\n",
-    "data_name_list = [# 'JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',\n",
-    "                  'JUICE_L1a_RPWI-HF-SID2_20240125T152238_V01.cdf',\n",
+    "data_name_list = ['JUICE_L1a_RPWI-HF-SID2_20240125T112327_V01.cdf',      # 128\n",
+    "                  #'JUICE_L1a_RPWI-HF-SID2_20240125T152238_V01.cdf',      # 512\n",
     "                 ]\n",
     "\"\"\"\n",
     "\"\"\""
@@ -186,16 +186,21 @@
     "data_name_list = ['04/19/SID2_20230419T135849-20230419T141229.cdf',\n",
     "                  '04/19/SID2_20230419T141231-20230419T141402.cdf',\n",
     "                 ]\n",
+    "\n",
     "# *** 20230530 ***\n",
     "data_name_list = ['05/30/SID2_20230530T100326-20230530T100925.cdf',\n",
-    "                  #'05/30/SID2_20230530T100927-20230530T100937.cdf',\n",
+    "                  '05/30/SID2_20230530T100927-20230530T100937.cdf',\n",
     "                 ]\n",
-    "# *** 20230601 ***\n",
+    "data_name_list = ['05/30/JUICE_L1a_RPWI-HF-SID2_20230530T100326-20230530T100925_V01___RPR1_52000010_2023.150.10.40.53.663.cdf',\n",
+    "                  '05/30/JUICE_L1a_RPWI-HF-SID2_20230530T100927-20230530T100937_V01___RPR1_52000011_2023.150.10.41.53.508.cdf',\n",
+    "                 ]\n",
+    "                 # *** 20230601 ***\n",
     "data_name_list = ['06/01/SID2_20230601T120759-20230601T120857.cdf',\n",
     "                  '06/01/SID2_20230601T121435-20230601T121533.cdf',\n",
     "                  '06/01/SID2_20230601T122138-20230601T122236.cdf',\n",
     "                  '06/01/SID2_20230601T122707-20230601T122805.cdf',\n",
     "                 ]\n",
+    "\n",
     "# *** all: 202305-06 ***\n",
     "data_name_list = ['05/30/SID2_20230530T100326-20230530T100925.cdf',\n",
     "                  '05/30/SID2_20230530T100927-20230530T100937.cdf',\n",
@@ -213,11 +218,12 @@
     "data_name_list = ['07/12/SID2_20230712T104149-20230712T232406.cdf']\n",
     "#\n",
     "data_name_list = ['07/12/SID2_20230712T232408-20230712T235156.cdf']\n",
-    "#      type-III\n",
+    "# type-III\n",
     "data_name_list = ['07/12/SID2_20230712T235158-20230713T001854.cdf',\n",
     "                  '07/13/SID2_20230713T001856-20230713T004644.cdf',\n",
     "                 ]\n",
-    "#      battery\n",
+    "data_name_list = ['07/13/SID2_20230713T023720-20230713T030416.cdf',\n",
+    "                 ]\n",
     "data_name_list = ['07/12/SID2_20230712T232408-20230712T235156.cdf',\n",
     "                  '07/12/SID2_20230712T235158-20230713T001854.cdf',\n",
     "                  '07/13/SID2_20230713T001856-20230713T004644.cdf',\n",
@@ -231,8 +237,6 @@
     "                  '07/13/SID2_20230713T040002-20230713T042751.cdf',\n",
     "                  '07/13/SID2_20230713T042753-20230713T045449.cdf',\n",
     "                  '07/13/SID2_20230713T045543-20230713T050917.cdf',\n",
-    "                 ]\n",
-    "data_name_list = ['07/13/SID2_20230713T023720-20230713T030416.cdf',\n",
     "                 ]\n",
     "# all\n",
     "data_name_list = ['07/12/SID2_20230712T090434-20230712T093848.cdf',\n",
@@ -940,6 +944,7 @@
    "source": [
     "# Y-range\n",
     "f_min = f_min0;      f_max = f_max0\n",
+    "# f_min = 41900;      f_max = 42100\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "# Z-range\n",
@@ -988,18 +993,70 @@
     "    xlim=[num_1d[0], num_1d[-1]]\n",
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim);  ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
     "\n",
-    "# range: Y-axis\n",
-    "\"\"\"\n",
-    "ylim=[10**(p_min), 10**(p_max)]\n",
-    "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
-    "\"\"\"\n",
-    "\n",
     "# Plot\n",
     "plt.show\n",
     "if dump_mode == 1:\n",
     "    png_fname = work_dir+data_name+'_FT.png'\n",
     "    if f_mode == 1:\n",
     "        png_fname = work_dir+data_name+'_FT-log.png'\n",
+    "    fig2d.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "057cadde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Y-range\n",
+    "f_min = f_min0;      f_max = f_max0\n",
+    "f_min = 100;         f_max = 1000\n",
+    "if f_mode == 0:\n",
+    "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
+    "# Z-range\n",
+    "p_min  = p_min0;     p_max  = p_max0\n",
+    "p_min  = p_min0+1.5;     p_max  = p_max0-2.5\n",
+    "\n",
+    "fig2d = plt.figure(figsize=[12,8])\n",
+    "ax1 = fig2d.add_subplot(1, 1, 1);  \n",
+    "if time_mode == 1:\n",
+    "    ax1 = fig2d.add_subplot(1, 1, 1);  ax5 = fig2d.add_subplot(2, 1, 2)\n",
+    "\n",
+    "# Y-axis\n",
+    "ax1.set_ylim(f_min, f_max); ax2.set_ylim(f_min, f_max); ax3.set_ylim(f_min, f_max); ax4.set_ylim(f_min, f_max)\n",
+    "if f_mode == 1:\n",
+    "    ax1.set_yscale('log')\n",
+    "ax1.set_ylabel('Frequency [kHz]')\n",
+    "\n",
+    "# X-axis\n",
+    "ax1.set_title('EE')\n",
+    "if time_mode == 1:\n",
+    "    ax5.set_xlabel(str_date)\n",
+    "else:\n",
+    "    ax1.set_xlabel(str_date)\n",
+    "\n",
+    "# Plot\n",
+    "print(num_1d.shape, freq_1d.shape, EE_2d.shape)\n",
+    "if time_mode == 1:\n",
+    "    p1 = ax1.pcolormesh(num_1d, freq_1d, EE_2d,   norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p5 = ax5.plot(np.ravel(spec.epoch[:]), '.')\n",
+    "    pp1 = fig2d.colorbar(p1, ax=ax5, orientation=\"vertical\"); pp1.set_label(power_str)\n",
+    "else:\n",
+    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d,   norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\"); pp1.set_label(power_str)\n",
+    "\n",
+    "# range: X-axis\n",
+    "if time_mode == 1:\n",
+    "    xlim=[num_1d[0], num_1d[-1]]\n",
+    "    ax1.set_xlim(xlim); ax2.set_xlim(xlim);  ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
+    "\n",
+    "# Plot\n",
+    "plt.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_FT-EE.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_FT-EE-log.png'\n",
     "    fig2d.savefig(png_fname)"
    ]
   },
@@ -1273,7 +1330,7 @@
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "# Z-range\n",
-    "p_min  = p_min0+1.5;     p_max  = p_max0-2\n",
+    "p_min  = p_min0+1;     p_max  = p_max0-4\n",
     "\n",
     "fig2d = plt.figure(figsize=[12,16])\n",
     "ax1 = fig2d.add_subplot(5, 1, 1);  ax2 = fig2d.add_subplot(5, 1, 2); ax3 = fig2d.add_subplot(5, 1, 3); ax4 = fig2d.add_subplot(5, 1, 4)\n",
@@ -1316,12 +1373,6 @@
     "if time_mode == 1:\n",
     "    xlim=[num_1d[0], num_1d[-1]]\n",
     "    ax1.set_xlim(xlim); ax2.set_xlim(xlim);  ax3.set_xlim(xlim); ax4.set_xlim(xlim); ax5.set_xlim(xlim)\n",
-    "\n",
-    "# range: Y-axis\n",
-    "\"\"\"\n",
-    "ylim=[10**(p_min), 10**(p_max)]\n",
-    "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
-    "\"\"\"\n",
     "\n",
     "# Plot\n",
     "plt.show\n",
